fix: metrics letter spacing

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -174,6 +174,7 @@ main .columns.metrics h2 {
   color: var(--mt-heading-color-secondary);
   font-size: var(--mt-heading-font-size-xl);
   font-weight: var(--mt-font-weight-bold);
+  letter-spacing: 1px;
 }
 
 main .columns.metrics p {
